--- a/Practicas/P3.html
+++ b/Practicas/P3.html
@@ -65,7 +65,7 @@
           <a href="https://www.umar.mx" target="_blank"><img src="../Imagenes/umar_logo_hd.webp" alt="Logo_UMAR" width="110%" height="auto"></a>
           </div>
           <div class="contenedor_titulo">
-          <div class="title">Programación I</div>
+          <div class="title">Programación II</div>
           <div class="subtitle">Universidad del Mar, campus Huatulco</div>
           <div class="subsubtitle">Licenciatura en Actuaría </div>
           <!-- <div class="subsubtitle"><a href="https://www.umar.mx/web/ensenanza/licenciaturas/licenciatura_en_administracion_turistica" target="_blank">Licenciatura en Administración Turística</a> </div>    -->
@@ -77,12 +77,12 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Informacion_General.html"> Información </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Quizes.html"> Quizes  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas.html">Prácticas</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Informacion_General.html"> Información </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
        
