--- a/Notas.html
+++ b/Notas.html
@@ -40,7 +40,7 @@
           <a href="https://www.umar.mx" target="_blank"><img src="./Imagenes/umar_logo_hd.webp" alt="Logo_UMAR" width="110%" height="auto"></a>
           </div>
           <div class="contenedor_titulo">
-          <div class="title">Programación I</div>
+          <div class="title">Programación II</div>
           <div class="subtitle">Universidad del Mar, campus Huatulco</div>
           <div class="subsubtitle">Licenciatura en Actuaría </div>
           <!-- <div class="subsubtitle"><a href="https://www.umar.mx/web/ensenanza/licenciaturas/licenciatura_en_administracion_turistica" target="_blank">Licenciatura en Administración Turística</a> </div>    -->
@@ -55,12 +55,12 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Informacion_General.html"> Información</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Quizes.html"> Quizes  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas.html">Prácticas</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Informacion_General.html"> Información</a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
        
@@ -87,19 +87,19 @@
         <a href="./Semanas/S6.ipynb" target="_blank">Semana 9</a> 
         <a href="./Semanas/S7.ipynb" target="_blank">Funciones</a> 
 
-        <!-- <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S3.ipynb" target="_blank">Semana 3</a> 
-        <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S4.ipynb" target="_blank">Semana 4</a> 
-        <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S5.ipynb" target="_blank">Semana 5</a> 
-        <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S6.ipynb" target="_blank" >Semana 6</a> 
-        <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S7.ipynb" target="_blank" >Semana 7</a> 
-        <a href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Semanas/S8.ipynb" target="_blank">Semana 8</a> 
+        <!-- <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S3.ipynb" target="_blank">Semana 3</a> 
+        <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S4.ipynb" target="_blank">Semana 4</a> 
+        <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S5.ipynb" target="_blank">Semana 5</a> 
+        <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S6.ipynb" target="_blank" >Semana 6</a> 
+        <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S7.ipynb" target="_blank" >Semana 7</a> 
+        <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Semanas/S8.ipynb" target="_blank">Semana 8</a> 
         <a href="https://drive.google.com/file/d/1CXtW7UXeX9E6X4zw8TPSrD9l8wTWGzPV/view?usp=sharing" target="_blank">Semana 9</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S9.html">Semana 9</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S10.html">Semana 10</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S11.html">Semana 11</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S12.html">Semana 12</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S13.html">Semana 13</a> 
-        <a href="https://pjhh-umar.github.io/ProgramacionUNO/Semanas/S14.html">Semana 14</a>  -->
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S9.html">Semana 9</a> 
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S10.html">Semana 10</a> 
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S11.html">Semana 11</a> 
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S12.html">Semana 12</a> 
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S13.html">Semana 13</a> 
+        <a href="https://pjhh-umar.github.io/ProgramacionDOS/Semanas/S14.html">Semana 14</a>  -->
     </div>
 
   </body>
