--- a/Practicas.html
+++ b/Practicas.html
@@ -40,7 +40,7 @@
           <a href="https://www.umar.mx" target="_blank"><img src="./Imagenes/umar_logo_hd.webp" alt="Logo_UMAR" width="110%" height="auto"></a>
           </div>
           <div class="contenedor_titulo">
-          <div class="title">Programación I</div>
+          <div class="title">Programación II</div>
           <div class="subtitle">Universidad del Mar, campus Huatulco</div>
           <div class="subsubtitle">Licenciatura en Actuaría </div>
           <!-- <div class="subsubtitle"><a href="https://www.umar.mx/web/ensenanza/licenciaturas/licenciatura_en_administracion_turistica" target="_blank">Licenciatura en Administración Turística</a> </div>    -->
@@ -55,12 +55,12 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Informacion_General.html"> Información</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Quizes.html"> Quizes  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas.html">Prácticas</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionUNO/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Informacion_General.html"> Información</a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
         <!-- 
@@ -77,10 +77,10 @@
     <body class="fondo-body" > <h1 class="page-title"> Prácticas</h1>  
 
     <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
-      <a  href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas/P1.html" target="_blank" > Prácticas 1</a>
-      <a  href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas/P2.html" target="_blank" > Prácticas 2</a>
-      <a  href="https://pjhh-umar.github.io/ProgramacionUNO/Practicas/P3.html" target="_blank" > Prácticas 3</a>
-      <!-- <a  href="https://github.com/pjhh-umar/ProgramacionUNO/blob/main/Practicas/P3.ipynb" target="_blank" > Prácticas 3</a> -->
+      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P1.html" target="_blank" > Prácticas 1</a>
+      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P2.html" target="_blank" > Prácticas 2</a>
+      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P3.html" target="_blank" > Prácticas 3</a>
+      <!-- <a  href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Practicas/P3.ipynb" target="_blank" > Prácticas 3</a> -->
     </div>   
   </body>
 </html>
