--- a/Practicas.html
+++ b/Practicas.html
@@ -77,9 +77,9 @@
     <body class="fondo-body" > <h1 class="page-title"> Prácticas</h1>  
 
     <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
-      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P1.html" target="_blank" > Prácticas 1</a>
+      <!-- <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P1.html" target="_blank" > Prácticas 1</a>
       <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P2.html" target="_blank" > Prácticas 2</a>
-      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P3.html" target="_blank" > Prácticas 3</a>
+      <a  href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/P3.html" target="_blank" > Prácticas 3</a> -->
       <!-- <a  href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Practicas/P3.ipynb" target="_blank" > Prácticas 3</a> -->
     </div>   
   </body>
