--- a/Notas.html
+++ b/Notas.html
@@ -79,8 +79,8 @@
       <body class="fondo-body" ><h1 class="page-title"> Notas</h1>  
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
           <!-- <a href="./Semanas/" download> </a><br> -->
-          <a href="./Semanas/Tema1_Errores_Excepciones.ipynb" target="_blank">Tema 1. Errores y excepciones en Python
-          </a> 
+          <a href="./Semanas/Tema1_Errores_Excepciones.ipynb" target="_blank">Tema 1. Errores y excepciones en Python</a> 
+          <a href="./Semanas/Tema2_POO" target="_blank">Tema 2. Programación Orientada a Objetos (POO)</a> 
         </div>
 
         <!--
