--- a/Notas.html
+++ b/Notas.html
@@ -58,7 +58,7 @@
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Home.html"> Inicio  </a> </li>
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Informacion_General.html"> Información</a> </li>
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li>
+            <!-- <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li> -->
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Enlaces_externos.html"> Links </a> </li>
           </ul>
