--- a/Practicas.html
+++ b/Practicas.html
@@ -81,8 +81,7 @@
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
           
-          <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Pregunta
-             1</a> 
+          <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
         <!--  <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q1.ipynb" target="_blank">Quiz 1</a> 
         <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q2.ipynb" target="_blank">Quiz 2</a> 
         <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q3.ipynb" target="_blank">Quiz 3</a> 
