--- a/Practicas.html
+++ b/Practicas.html
@@ -80,7 +80,7 @@
       <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
-          
+          <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/PracticasEP1.html" target="_blank">Prácticas Primer Examen Parcial </a>           
           <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/PracticasEP1.html" target="_blank">Prácticas Segundo Examen Parcial </a> 
         <!--  <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q1.ipynb" target="_blank">Quiz 1</a> 
         <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q2.ipynb" target="_blank">Quiz 2</a> 
