--- a/Practicas/PracticasEP1.html
+++ b/Practicas/PracticasEP1.html
@@ -77,7 +77,7 @@
       <title>Quizes</title>
       </head>  
 
-      <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
+      <body class="fondo-body" ><h1 class="page-title"> Prácticas Segundo Examen Parcial</h1>  
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
           
