--- a/Practicas.html
+++ b/Practicas.html
@@ -74,7 +74,7 @@
         
       <!-- This part is for title in tab-->
             
-      <title>Quizes</title>
+      <title>Prácticas</title>
       </head>  
 
       <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
