--- a/Practicas.html
+++ b/Practicas.html
@@ -80,8 +80,18 @@
       <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
-          <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/PracticasEP1.html" target="_blank">Prácticas Primer Examen Parcial </a>           
-          <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas/PracticasEP1.html" target="_blank">Prácticas Segundo Examen Parcial </a> 
+          <center>
+            <button class="respButton hvr-grow"> Prácticas Primer Examen Parcial</button>
+            <div class="resp-box flexbox">
+              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
+            </div>
+            <br>
+
+            <button class="respButton hvr-grow"> Prácticas Segundo Examen Parcial</button>
+            <div class="resp-box flexbox">
+              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
+            </div>
+          </center>
         <!--  <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q1.ipynb" target="_blank">Quiz 1</a> 
         <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q2.ipynb" target="_blank">Quiz 2</a> 
         <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q3.ipynb" target="_blank">Quiz 3</a> 
