--- a/Practicas.html
+++ b/Practicas.html
@@ -83,7 +83,7 @@
           <center>
             <button class="respButton hvr-grow"> Prácticas Primer Examen Parcial</button>
             <div class="resp-box flexbox">
-              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
+              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a><br>
             </div>
             <br>
 
