--- a/Practicas.html
+++ b/Practicas.html
@@ -80,13 +80,12 @@
       <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
-          <center>
-            <button class="respButton hvr-grow"> Prácticas Primer Examen Parcial</button>
+          <!-- <button class="respButton hvr-grow"> Prácticas Primer Examen Parcial</button>
             <div class="resp-box flexbox">
-              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a><br>
+              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a><br> 
             </div>
-            <br>
-
+            <br> -->
+          <center> 
             <button class="respButton hvr-grow"> Prácticas Segundo Examen Parcial</button>
             <div class="resp-box flexbox">
               <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
