--- a/Practicas.html
+++ b/Practicas.html
@@ -80,15 +80,16 @@
       <body class="fondo-body" ><h1 class="page-title"> Prácticas</h1>  
 
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
-          <!-- <button class="respButton hvr-grow"> Prácticas Primer Examen Parcial</button>
-            <div class="resp-box flexbox">
-              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a><br> 
-            </div>
-            <br> -->
+          
           <center> 
-            <button class="respButton hvr-grow"> Prácticas Segundo Examen Parcial</button>
+            <button class="respButton hvr-grow"> 🧑🏻‍💻Prácticas Primer Examen Parcial</button>
+            <!-- <div class="resp-box flexbox">
+              <a href="" target="_blank"> Práctica 1</a> 
+            </div> -->
+            <br><br>
+            <button class="respButton hvr-grow"> 🧑🏻‍💻Prácticas Segundo Examen Parcial</button>
             <div class="resp-box flexbox">
-              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank">Práctica 1</a> 
+              <a href="https://drive.google.com/file/d/1csjeFWSU00XdpojZqY6XQHc5X_hEFs81/view?usp=sharing" target="_blank"> Práctica 1</a> 
             </div>
           </center>
         <!--  <a href="https://github.com/pjhh-umar/ProgramacionDOS/blob/main/Quizes/Q1.ipynb" target="_blank">Quiz 1</a> 
