--- a/Practicas.html
+++ b/Practicas.html
@@ -125,10 +125,9 @@
           <iframe 
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzuYsdF_gyuVkXyRujUCWwXAeJCW4lV3CO8vX5ONpR0MkTfKXaEbjURgEG1SfwDxUR8CGD7vf7LkWJ/pubhtml?gid=655072210&amp;single=true&amp;widget=true&amp;headers=false" 
             width="100%" 
-            height="2500px"  
+            height="5000px"  
             style="overflow: auto;" 
-            frameborder="0" 
-            class="sheet">
+            frameborder="0">
           </iframe>
                     
         </div>
