--- a/Practicas/P2.html
+++ b/Practicas/P2.html
@@ -1090,7 +1090,7 @@
       </p>
       <p>
         <center>
-        <img src="../Imagenes/Ejercicio2.9.png" alt="" width="85%" height="auto">
+        <img src="../Imagenes/2.9.png" alt="" width="85%" height="auto">
       </center>
       </p>
     </div>
@@ -1101,7 +1101,7 @@
         vector de todos los números pares del 30 al 70.</p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.10.png" alt="" width="70%" height="auto">
+         <img src="../Imagenes/2.10.png" alt="" width="70%" height="auto">
         </center>
       </p>
     </div>
@@ -1113,7 +1113,7 @@
       <p><b>Hint:</b> Utiliza el metodo <code>array.reshape()</code>.</p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.11.png" alt="" width="18%" height="auto">
+         <img src="../Imagenes/2.11.png" alt="" width="18%" height="auto">
         </center>
       </p>
     </div>
@@ -1127,7 +1127,7 @@
       </p>
       <p>
         <center>
-        <img src="../Imagenes/Ejercicio2.12.png" alt="" width="40%" height="auto">
+        <img src="../Imagenes/2.12.png" alt="" width="40%" height="auto">
       </center>
       </p>
     </div>
@@ -1139,7 +1139,7 @@
       </p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.13.png" alt="" width="15%" height="auto">
+         <img src="../Imagenes/2.13.png" alt="" width="15%" height="auto">
         </center>
       </p>
     </div>
@@ -1151,7 +1151,7 @@
       </p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.14.png" alt="" width="85%" height="auto">
+         <img src="../Imagenes/2.14.png" alt="" width="85%" height="auto">
         </center>
       </p>
 
@@ -1163,7 +1163,7 @@
       </p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.15.png" alt="" width="20%" height="auto">
+         <img src="../Imagenes/2.15.png" alt="" width="20%" height="auto">
         </center>
       </p>
     </div>
@@ -1197,7 +1197,7 @@
       <p><b>Observación:</b> No utilice la función <code>numpy.flip()</code></p>
       <p>
         <center>
-         <img src="../Imagenes/Ejercicio2.18.png" alt="" width="20%" height="auto">
+         <img src="../Imagenes/2.18.png" alt="" width="20%" height="auto">
         </center>
       </p>
       
@@ -1260,7 +1260,7 @@
       </p>
       <p>
         <center>
-          <img src="../Imagenes/Ejercicio2.23.png" alt="" width="10%" height="auto">
+          <img src="../Imagenes/2.23.png" alt="" width="10%" height="auto">
          </center>
       </p>
 
