--- a/Practicas.html
+++ b/Practicas.html
@@ -93,6 +93,12 @@
             <div class="resp-box flexbox" id="box2">
               <a href="https://drive.google.com/file/d/1nZi16WZgR0q1BrLR811EdNQeEiZfilYh/view?usp=sharing" target="_blank"> Práctica 1</a> 
             </div>
+
+            <br>
+            <button class="respButton hvr-grow" onclick="toggleBox('box3')"> Segundo Examen Parcial</button>
+            <div class="resp-box flexbox" id="box3">
+              <a href="https://drive.google.com/file/d/1GK56Bdi4hYo83wfAxB6U5OSRU4SWqalL/view?usp=sharing" target="_blank"> EP2</a> 
+            </div>
           </center>
           
 
