--- a/Notas.html
+++ b/Notas.html
@@ -84,6 +84,7 @@
           <a href="./Temas/Tema3_Modulos.ipynb" target="_blank">Tema 3. Módulos en Python</a> 
           <a href="./Temas/Tema4_Matplotlib.ipynb" target="_blank">Tema 4. Matplotlib</a> 
           <a href="./Temas/Tema5_Numpy.ipynb" target="_blank">Tema 5. Numpy</a> 
+          <a href="./Temas/Tema6_Subplots.ipynb" target="_blank">Tema 6. Subplots</a> 
         </div>
  
         <!--
