--- a/Notas.html
+++ b/Notas.html
@@ -85,6 +85,8 @@
           <a href="./Temas/Tema4_Matplotlib.ipynb" target="_blank">Tema 4. Matplotlib</a> 
           <a href="./Temas/Tema5_Numpy.ipynb" target="_blank">Tema 5. Numpy</a> 
           <a href="./Temas/Tema6_Subplots.ipynb" target="_blank">Tema 6. Subplots</a> 
+          <a href="./Temas/La_caminata_del_Actuario.ipynb" target="_blank">La caminata del Actuario</a> 
+          
         </div>
  
         <!--
