--- a/Notas.html
+++ b/Notas.html
@@ -86,6 +86,7 @@
           <a href="./Temas/Tema5_Numpy.ipynb" target="_blank">Tema 5. Numpy</a> 
           <a href="./Temas/Tema6_Subplots.ipynb" target="_blank">Tema 6. Subplots</a> 
           <a href="./Temas/La_caminata_del_Actuario.ipynb" target="_blank">La caminata del Actuario</a> 
+          <a href="./Temas/Tema7_Pandas.ipynb" target="_blank">Tema 7. Pandas</a> 
           
         </div>
  
