--- a/Enlaces_externos.html
+++ b/Enlaces_externos.html
@@ -124,15 +124,12 @@
   <body class="fondo-body" ><h1 class="page-title"> Enlaces externos </h1>   
 
 
-    <div class="links-box" style = "font-family: 'Oldenburg', cursive; font-size: 150%;">
-      <!-- <a href="../Archivos/EP1-GrupoA.xlsx" download> EP1-GrupoA.xlsx</a><br> -->
-      <!-- <a href="../Archivos/EP1-GrupoB.xlsx" download> EP1-GrupoB.xlsx</a><br> -->
-      <!-- <a href="./Archivos/EO.pdf" download> Examen Ordinario</a> -->
-    </div>
-
-<!--     
-    <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
-      <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a> 
-    </div>    -->
+     <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
+      <center>
+          <a href="../Archivos/colesterol.csv" target="_blank">Descargar archivo colesterol.csv</a> 
+          <a href="../Archivos/colesterol_.csv" target="_blank">Descargar archivo colesterol_.csv</a> 
+      </center>
+      <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
+    </div>   
   </body>
 </html>
