--- a/Enlaces_externos.html
+++ b/Enlaces_externos.html
@@ -106,7 +106,7 @@
         <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
         <!-- <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li> -->
         <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
-        <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Enlaces_externos.html"> Links </a> </li>
+        <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Archivos.html"> Links </a> </li>
       </ul>
       </nav>
         
@@ -118,16 +118,28 @@
 
       <!-- This part is for title in tab-->
             
-      <title>Enlaces externos</title>
+      <title>Archivos</title>
       </head>  
 
-  <body class="fondo-body" ><h1 class="page-title"> Enlaces externos </h1>   
+  <body class="fondo-body" ><h1 class="page-title"> Archivos </h1>   
 
 
      <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
       <center>
           <a href="../Archivos/colesterol.csv" target="_blank">Descargar archivo colesterol.csv</a> 
           <a href="../Archivos/colesterol_.csv" target="_blank">Descargar archivo colesterol_.csv</a> 
+          <a href="../Archivos/MOSPU.csv" target="_blank">Descargar archivo MOSPU.csv</a> 
+          <a href="../Archivos/Titanic.csv" target="_blank">Descargar archivo Titanic.csv</a> 
+      </center>
+      <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
+    </div>   
+
+    <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
+      <center>
+          <a href="../Archivos/colesterol.csv" target="_blank">Descargar archivo colesterol.csv</a> 
+          <a href="../Archivos/colesterol_.csv" target="_blank">Descargar archivo colesterol_.csv</a> 
+          <a href="../Archivos/MOSPU.csv" target="_blank">Descargar archivo MOSPU.csv</a> 
+          <a href="../Archivos/Titanic.csv" target="_blank">Descargar archivo Titanic.csv</a> 
       </center>
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
