--- a/Archivos.html
+++ b/Archivos.html
@@ -126,10 +126,10 @@
 
      <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
       <center>
-          <a href="../Archivos/colesterol.csv" target="_blank">Descargar archivo colesterol.csv</a> 
-          <a href="../Archivos/colesterol_.csv" target="_blank">Descargar archivo colesterol_.csv</a> 
-          <a href="../Archivos/MOSPU.csv" target="_blank">Descargar archivo MOSPU.csv</a> 
-          <a href="../Archivos/Titanic.csv" target="_blank">Descargar archivo Titanic.csv</a> 
+          <a href="../Archivos/datasets/colesterol.csv" target="_blank">Descargar archivo colesterol.csv</a> 
+          <a href="../Archivos//datasets/colesterol_.csv" target="_blank">Descargar archivo colesterol_.csv</a> 
+          <a href="../Archivos//datasets/MOSPU.csv" target="_blank">Descargar archivo MOSPU.csv</a> 
+          <a href="../Archivos//datasets/Titanic.csv" target="_blank">Descargar archivo Titanic.csv</a> 
       </center>
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
@@ -137,7 +137,7 @@
     <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
       <center>
           <a href="../Archivos/pdfs/EP3-2024.pdf" target="_blank">Tercer Examen Parcial 2024</a> 
-          > 
+        
       </center>
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
