--- a/Archivos.html
+++ b/Archivos.html
@@ -134,6 +134,8 @@
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
 
+    <h1 class="page-title"> Examenes pasados</h1>    
+
     <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
       <center>
           <a href="../Archivos/pdfs/EP3-2024.pdf" target="_blank">Tercer Examen Parcial 2024</a> 
