--- a/Archivos.html
+++ b/Archivos.html
@@ -134,6 +134,7 @@
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
 
+    <br>
     <h1 class="page-title"> Examenes pasados</h1>    
 
     <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
@@ -143,5 +144,30 @@
       </center>
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
     </div>   
+
+
+              <!-- Donde aparecerá la fecha de la última modificación -->
+   <footer>
+    <center>
+     <p id="ultima-actualizacion"></p>
+    </center>
+</footer>
+<script>
+  // Obtenemos la fecha y hora de la última modificación del documento
+  const fechaModificacion = new Date(document.lastModified);
+  
+  // Opciones para formatear la fecha (por ejemplo, DD/MM/AAAA)
+  const opcionesFecha = { day: '2-digit', month: '2-digit', year: 'numeric' };
+  const fechaFormateada = fechaModificacion.toLocaleDateString('es-ES', opcionesFecha);
+
+  // Obtenemos la hora (HH:MM:SS)
+  const horaFormateada = fechaModificacion.toLocaleTimeString('es-ES', {
+      hour: '2-digit', minute: '2-digit'
+  });
+
+  // Insertamos la fecha y la hora en el elemento con el ID "ultima-modificacion"
+  document.getElementById("ultima-actualizacion").textContent = `Última actualización: ${fechaFormateada}`;
+</script>
+
   </body>
 </html>
