--- a/Practicas/P3.html
+++ b/Practicas/P3.html
@@ -82,7 +82,7 @@
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Notas.html"> Notas  </a> </li>
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Quizes.html"> Quizes  </a> </li>
             <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Practicas.html">Prácticas</a> </li>
-            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Archivos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-umar.github.io/ProgramacionDOS/Archivos.html">Archivos </a> </li>
           </ul>
           </nav>
        
