--- a/Archivos.html
+++ b/Archivos.html
@@ -139,7 +139,8 @@
 
     <div class="links-box_"  style = "font-family: 'Oldenburg', cursive; font-size: 95%;">  
       <center>
-          <a href="./Archivos/pdfs/EP3-2024.pdf" target="_blank">Tercer Examen Parcial 2024</a> 
+        <a href="./Archivos/pdfs/EP2-2024.pdf" target="_blank">Segundo Examen Parcial 2024</a> 
+        <a href="./Archivos/pdfs/EP3-2024.pdf" target="_blank">Tercer Examen Parcial 2024</a> 
         
       </center>
       <!-- <a href="./Descargas/archivo_ordinario.txt" download> archivo_ordinario</a>  -->
