--- a/Notas.html
+++ b/Notas.html
@@ -79,14 +79,14 @@
       <body class="fondo-body" ><h1 class="page-title"> Notas</h1>  
         <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
           <!-- <a href="./Semanas/" download> </a><br> -->
-          <a href="./Temas/Tema1_Errores_Excepciones.ipynb" target="_blank">Tema 1. Errores y excepciones en Python</a> 
+          <!-- <a href="./Temas/Tema1_Errores_Excepciones.ipynb" target="_blank">Tema 1. Errores y excepciones en Python</a> 
           <a href="./Temas/Tema2_POO.ipynb" target="_blank">Tema 2. Programación Orientada a Objetos (POO)</a> 
           <a href="./Temas/Tema3_Modulos.ipynb" target="_blank">Tema 3. Módulos en Python</a> 
           <a href="./Temas/Tema4_Matplotlib.ipynb" target="_blank">Tema 4. Matplotlib</a> 
           <a href="./Temas/Tema5_Numpy.ipynb" target="_blank">Tema 5. Numpy</a> 
           <a href="./Temas/Tema6_Subplots.ipynb" target="_blank">Tema 6. Subplots</a> 
           <a href="./Temas/La_caminata_del_Actuario.ipynb" target="_blank">La caminata del Actuario</a> 
-          <a href="./Temas/Tema7_Pandas.ipynb" target="_blank">Tema 7. Pandas</a> 
+          <a href="./Temas/Tema7_Pandas.ipynb" target="_blank">Tema 7. Pandas</a>  -->
           
         </div>
  
