--- a/Informacion_General.html
+++ b/Informacion_General.html
@@ -105,12 +105,12 @@
             
                   <p>
                     <ul>
-                      <li><h5 class="title">📝Examen:</h5>  $70 \%$</li><br>
-                      <li><h5 class="title">📚Quizes semanales:</h5>  $30 \%$</li>
-                      <p>El Quiz correspondiente a cada semana se aplica el lunes inmediato de la siguiente semana
+                      <li><h5 class="title">📝Proyecto</h5>  $80 \%$</li><br>
+                      <li><h5 class="title">📚Prácticas de clase:</h5>  $20 \%$</li>
+                      <!-- <p>El Quiz correspondiente a cada semana se aplica el lunes inmediato de la siguiente semana
                         durante la segunda hora de clase. En éste se evaluarán conceptos fundamentales 
                         vistos durante la semana previa. En la semana de examenes parciales no habra Quiz.
-                      </p>
+                      </p> -->
                       <!-- <li><b>🥊Prácticas🏋🏻:</b> 
                       <p>Semanalmente se publicarán en la página del curso 
                         <a href="https://pjhh-umar.github.io/CalculoUNO/Practicas.html"><b> prácticas</b></a> 
